# cricket-draft-assistant

./: .gitignore  README.md  pyproject.toml  sample_players.csv
.github/: copilot-instructions.md
cricket_draft_assistant/: __init__.py  cli.py  core.py  web.py
tests/: test_core.py
