[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cricket-draft-assistant"
version = "0.1.0"
description = "Opponent-aware Monte Carlo draft assistant for cricket team selection"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2.3", "streamlit>=1.44.0"]

[project.scripts]
cricket-draft-assistant = "cricket_draft_assistant.cli:main"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]

[tool.hatch.build.targets.wheel]
packages = ["cricket_draft_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
